--- a/tests/myproduct/supervisor/myproduct.conf
+++ b/tests/myproduct/supervisor/myproduct.conf
@@ -10,6 +10,18 @@ stderr_logfile=/opt/myproduct/log/supervisor-api-8001.log
 stderr_logfile_maxbytes=1MB
 stderr_logfile_backups=10
 
+[program:background]
+command=/usr/local/bin/apiphant-background /opt/myproduct
+directory=/opt/myproduct
+user=myproduct
+autostart=true
+autorestart=true
+startsecs=5
+startretries=3
+stderr_logfile=/opt/myproduct/log/supervisor-background.log
+stderr_logfile_maxbytes=1MB
+stderr_logfile_backups=10
+
 [group:myproduct]
-programs=api-8001
+programs=api-8001,background
 # Add more here: 8002, 8003, etc.
