--- a/tests/myproduct/supervisor/myproduct.conf
+++ b/tests/myproduct/supervisor/myproduct.conf
@@ -10,7 +10,7 @@ stderr_logfile=/opt/myproduct/log/supervisor-api-8001.log
 stderr_logfile_maxbytes=1MB
 stderr_logfile_backups=10
 
-[program:background]
+[program:myproduct-background]
 command=/usr/local/bin/apiphant-background /opt/myproduct
 directory=/opt/myproduct
 user=myproduct
@@ -23,5 +23,5 @@ stderr_logfile_maxbytes=1MB
 stderr_logfile_backups=10
 
 [group:myproduct]
-programs=api-8001,background
+programs=api-8001,myproduct-background
 # Add more here: 8002, 8003, etc.
