--- a/tests/myproduct/supervisor/myproduct.conf
+++ b/tests/myproduct/supervisor/myproduct.conf
@@ -1,4 +1,4 @@
-[program:api-8001]
+[program:myproduct-api-8001]
 command=/usr/local/bin/apiphant /opt/myproduct 127.0.0.1:8001
 directory=/opt/myproduct
 user=myproduct
@@ -23,5 +23,5 @@ stderr_logfile_maxbytes=1MB
 stderr_logfile_backups=10
 
 [group:myproduct]
-programs=api-8001,myproduct-background
+programs=myproduct-background,myproduct-api-8001
 # Add more here: 8002, 8003, etc.
