--- a/tests/myproduct/supervisor/myproduct.conf
+++ b/tests/myproduct/supervisor/myproduct.conf
@@ -6,9 +6,10 @@ autostart=true
 autorestart=true
 startsecs=5
 startretries=3
-stderr_logfile=/opt/myproduct/log/supervisor-api-8001.log
-stderr_logfile_maxbytes=1MB
-stderr_logfile_backups=10
+redirect_stderr=True
+stdout_logfile=/opt/myproduct/log/supervisor-api-8001.log
+stdout_logfile_maxbytes=1MB
+stdout_logfile_backups=10
 
 [program:myproduct-background]
 command=/usr/local/bin/apiphant-background /opt/myproduct
@@ -18,9 +19,10 @@ autostart=true
 autorestart=true
 startsecs=5
 startretries=3
-stderr_logfile=/opt/myproduct/log/supervisor-background.log
-stderr_logfile_maxbytes=1MB
-stderr_logfile_backups=10
+redirect_stderr=True
+stdout_logfile=/opt/myproduct/log/supervisor-background.log
+stdout_logfile_maxbytes=1MB
+stdout_logfile_backups=10
 
 [group:myproduct]
 programs=myproduct-background,myproduct-api-8001
